src/objects/Outlet__c.object
<CustomObject>
    <description>Outlet for offer redemption</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Outlet Description</description>
        <inlineHelpText>Outlet Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlet_Code__c</fullName>
        <description>Outlet Code</description>
        <inlineHelpText>Outlet Code</inlineHelpText>
        <label>Outlet Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Type__c</fullName>
        <description>Outlet Type</description>
        <inlineHelpText>Outlet Type</inlineHelpText>
        <label>Outlet Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Property of the outlet</description>
        <inlineHelpText>Property of the outlet</inlineHelpText>
        <label>Property</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outlet</relationshipLabel>
        <relationshipName>Outlet</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outlet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Outlet_Code__c</columns>
        <columns>Outlet_Type__c</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outlet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>